using Shared.Application.Domain.Concerns.Auditable;
using Shared.Application.Domain.Concerns.SoftDeletable;
using Shared.Application.Domain.Models;
using Shared.Application.Domain.Orders;

using Module.Customer.Domain.Addresses;
using Module.Inventory.Domain.StockReservations;
using Module.Ordering.Domain.Adjustments;
using Module.Ordering.Domain.LineItems;
using Module.Shipping.Domain.Shipments;
using Module.Shipping.Domain.ShippingMethods;
using Module.Shipping.Domain.ShippingRates;
using Module.Billing.Domain.PaymentCaptures;
using Module.Billing.Domain.PaymentMethods;

using Shared.Security.Identity.Domain.Users;

namespace Module.Ordering.Domain.Orders;

/// <summary>
/// Represents a customer order as the aggregate root in the ordering context.
/// </summary>
// @CAT-10 Invariant: Total = ItemTotal + AdjustmentTotal + ShipmentTotal; CheckoutState progresses forward; Finalized orders are immutable except Cancel; Total >= 0
// @CAT-10 Boundary: Domain → Persistence — EF Core entity; do not add persistence concerns to domain logic
public sealed partial class Order : Entity, IAuditable, ISoftDeletable
{
    #region Properties
    public string Number { get; set; } = string.Empty;
    public string? SessionId { get; set; }
    public string Currency { get; set; } = OrderConstant.Defaults.Currency;
    public decimal ItemTotal { get; set; }
    public decimal AdjustmentTotal { get; set; }
    public decimal ShipmentTotal { get; set; }
    public decimal Total { get; set; }
    public decimal PaymentTotal { get; set; }
    public decimal OutstandingBalance { get; set; }
    public decimal TotalWeight { get; set; }
    public Guid? ShippingRateId { get; set; }
    public bool IsFreeShipping { get; set; }
    public int ItemCount { get; set; }

    #region Status/State
    public OrderPaymentState PaymentState { get; set; }
    public ShipmentState ShipmentState { get; set; }
    public OrderStatus Status { get; set; } = OrderStatus.Draft;
    public CheckoutState CheckoutState { get; set; } = CheckoutState.Address;

    #endregion
    #endregion Properties

    #region Contact
    public string? Email { get; set; }
    public string? SpecialInstructions { get; set; }
    #endregion Contact

    #region Timestamps

    #region Payment State
    public DateTimeOffset? PaymentProcessingAtUtc { get; set; }
    public DateTimeOffset? PaymentCompletedAtUtc { get; set; }
    public DateTimeOffset? PaymentFailedAtUtc { get; set; }
    #endregion

    #region Shipment State
    public DateTimeOffset? ShipmentShippedAtUtc { get; set; }
    public DateTimeOffset? ShipmentDeliveredAtUtc { get; set; }
    #endregion

    #region Order State
    public DateTimeOffset? CompletedAtUtc { get; set; }
    public DateTimeOffset? CanceledAtUtc { get; set; }
    public Guid? CanceledById { get; set; }
    public DateTimeOffset? ApprovedAtUtc { get; set; }
    public Guid? ApprovedById { get; set; }

    #endregion
    #region Auditing
    public DateTimeOffset CreatedAtUtc { get; set; }
    public DateTimeOffset? ModifiedAtUtc { get; set; }
    public string? CreatedBy { get; set; }
    public string? ModifiedBy { get; set; }
    #endregion Auditing

    #endregion Timestamps

    #region Addresses
    public Guid? BillAddressId { get; set; }
    public Guid? ShipAddressId { get; set; }
    #endregion Addresses

    #region Relationships
    public Guid? UserId { get; set; }
    public Guid? ShippingMethodId { get; set; }
    public Guid? PaymentMethodId { get; set; }
    #endregion Relationships

    #region Navigation
    public ShippingMethod? ShippingMethod { get; set; }
    public PaymentMethod? PaymentMethod { get; set; }
    public User? User { get; set; }
    public Address? BillAddress { get; set; }
    public Address? ShipAddress { get; set; }
    public ShippingRate? ShippingRate { get; set; }
    public ICollection<LineItem> LineItems { get; set; } = [];
    public ICollection<Adjustment> Adjustments { get; set; } = [];
    public ICollection<Shipment> Shipments { get; set; } = [];
    public ICollection<PaymentCapture> PaymentCaptures { get; set; } = [];
    public ICollection<StockReservation> StockReservations { get; set; } = [];
    #endregion Navigation

    #region Soft Deletion
    public bool IsDeleted { get; set; }
    public DateTimeOffset? DeletedAtUtc { get; set; }
    public string? DeletedBy { get; set; }
    #endregion Soft Deletion

    #region Constructor
    internal Order() { }
    #endregion Constructor
}